# backup-tool

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  README.rst  alembic.ini  pip-requires.txt  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini
alembic/: env.py
alembic/versions/: ef9f78b6211b_initial_schema.py  ff8c0e19188c_add_cached_mtime_and_size_columns_for_.py
backup_tool/: __init__.py  client.py  crypto.py  database.py  exception.py  oci_client.py  utils.py
backup_tool/cli/: client.py  common.py  object.py
backup_tool/storage/: oci.py
changelog.d/: renovate-dev-oci-2x.md
tests/: requirements.txt  requires.txt  test_cli.py  test_cli_advanced.py  test_client.py  test_crypto.py  test_oci.py  test_utils.py  utils.py
tests/cli/: test_client.py  test_object.py
tests/storage/: test_oci.py
