[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backup_tool"
description = "Backup Tool File Manager"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tyler D. North", email = "me@tyler-north.com" },
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "oci==2.178.0",
    "pycryptodome==3.23.0",
    "SQLAlchemy==2.0.50",
    "PyYAML==6.0.3",
    "alembic==1.18.4",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "mock==5.2.0",
    "tox==4.55.1",
    "pylint==4.0.5",
    "bandit==1.9.4",
]

[project.scripts]
backup-tool = "backup_tool.cli.client:main"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
exclude = ["htmlcov", "tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation",
    "unnecessary-pass",
    "missing-module-docstring",
    "too-many-instance-attributes",
    "fixme",
    "invalid-name",
    "broad-except",
    "too-few-public-methods",
    "anomalous-backslash-in-string",
    "unnecessary-comprehension",
    "too-many-lines",
    "too-many-arguments",
    "too-many-branches",
    "singleton-comparison",
    "line-too-long",
    "too-many-positional-arguments",
]
